<resources>
    <string name="app_name">Bible Quiz</string>
    <string name="title1">Question 1/7</string>
    <string name="title2">Question 2/7</string>
    <string name="title3">Question 3/7</string>
    <string name="title4">Question 4/7</string>
    <string name="title5">Question 5/7</string>
    <string name="title6">Question 6/7</string>
    <string name="title7">Question 7/7</string>
    <string name="title8">Finish!</string>
    <string name="endingcomment">Thank you for taking the Bible Quiz!</string>
    <string name="question1">Who started putting Bible in hotel rooms?</string>
    <string name="question2">Famous men or women who believed in the Bible</string>
    <string name="question3">Which blockbuster movie heavily draws from the Bible?</string>
    <string name="question4">The Bible is known as the inerrant word of ___</string>
    <string name="question5">What form of documents are in the Bible?</string>
    <string name="question6">The Bible is the best-selling book in the _____</string>
    <string name="question7">Who was buried with a stalk of marijuana, Gibson Les Paul guitar, and a Bible?</string>
    <string name="answer1a">Billy Graham</string>
    <string name="answer1b">Calvary Chapel</string>
    <string name="answer1c">The Gideons</string>
    <string name="answer1d">Charles Spurgeon</string>
    <string name="answer2a">Abraham Lincoln, 16th U.S. president</string>
    <string name="answer2b">Louis Jean Pasteur, father of modern microbiology</string>
    <string name="answer2c">Steve McQueen, aka The King of Cool</string>
    <string name="answer2d">Cris Cyborg Justino, UFC women featherweight champion</string>
    <string name="answer3a">God All Mighty</string>
    <string name="answer3b">The Matrix</string>
    <string name="answer3c">Wholly Moses!</string>
    <string name="answer3d">Transformers</string>
    <string name="answer4">case sensitive</string>
    <string name="answer4_text_input">God</string>
    <string name="answer5a">historical</string>
    <string name="answer5b">letter</string>
    <string name="answer5c">image</string>
    <string name="answer5d">witness account</string>
    <string name="answer6_text_input">world</string>
    <string name="answer7a">BB King</string>
    <string name="answer7b">Jimmy Hendrix</string>
    <string name="answer7c">Pete Townsend</string>
    <string name="answer7d">Bob Marley</string>
    <string name="buttonPrev">previous</string>
    <string name="buttonShow">Show Answer</string>
    <string name="buttonNext">next</string>
    <string name="buttonFinish">finish</string>
    <string name="buttonStartOver">start over</string>
    <string name="show_answer_question2">All answers are correct</string>
</resources>
