<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.MainActivity">

    <LinearLayout style="@style/LinearStyle">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/title1" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/hotel" />
        <!--"http://time.com/money/4466449/amenities-disappearing-hotel-rooms/", "5/10/18"-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question1" />

        <RadioGroup
            android:id="@+id/rgAnswer1"
            style="@style/RadioGroupStyle">

            <RadioButton
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer1a" />

            <RadioButton
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer1b" />

            <RadioButton
                android:id="@+id/answer1"
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer1c" />

            <RadioButton
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer1d" />
        </RadioGroup>

        <TextView
            android:id="@+id/show_text_view"
            style="@style/ShowStyle"
            android:text=" " />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPrev" />

            <Button
                android:id="@+id/show_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showAnswer"
                android:text="Show Answer" />

            <Button
                android:id="@+id/next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonNext" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
