<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.Question5Activity">

    <LinearLayout style="@style/LinearStyle">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/title5" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/documents" />
        <!--"https://pixabay.com/en/photos/poetry/", "5/8/18"-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question5"

            />

        <LinearLayout style="@style/CheckboxStyle">

            <CheckBox
                android:id="@+id/checkanswer5a"
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer5a" />

            <CheckBox
                android:id="@+id/checkanswer5b"
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer5b" />

            <CheckBox
                android:id="@+id/checkanswer5c"
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer5c" />

            <CheckBox
                android:id="@+id/checkanswer5d"
                style="@style/AnswerChoicesStyle"
                android:text="@string/answer5d" />
        </LinearLayout>

        <TextView
            android:id="@+id/show_text_view"
            style="@style/ShowStyle"
            android:text=" " />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPrev" />

            <Button
                android:id="@+id/show_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showAnswer"
                android:text="Show Answer" />

            <Button
                android:id="@+id/next5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonNext" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


