<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.Main8Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/image_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title7"
            android:textAllCaps="true"
            android:textSize="@dimen/title_text" />

        <ImageView
            android:layout_width="@dimen/image_w"
            android:layout_height="@dimen/image_h"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/image_margin"
            android:layout_marginVertical="@dimen/image_margin"
            android:src="@drawable/tombstone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/question_margin_h"
            android:layout_marginVertical="@dimen/question_margin_v"
            android:text="@string/question7"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text" />

        <RadioGroup
            android:id="@+id/rgAnswer7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/question_margin_h"
            android:layout_marginVertical="@dimen/question_margin_h">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7a"
                android:textSize="@dimen/answer_text" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7b"
                android:textSize="@dimen/answer_text" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7c"
                android:textSize="@dimen/answer_text" />

            <RadioButton
                android:id="@+id/answer7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer7d"
                android:textSize="@dimen/answer_text" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="previous" />

            <Button
                android:id="@+id/next7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="finish" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

