<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.Question4Activity">

    <LinearLayout style="@style/LinearStyle">

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/title4" />

        <ImageView
            style="@style/ImageStyle"
            android:src="@drawable/word" />
        <!--"https://www.ucg.org/bible-study-tools/booklets/what-happens-after-death/will-the-torment-of-the-wicked-last-forever", "5/8/18"-->
        <TextView
            style="@style/QuestionTextStyle"
            android:text="@string/question4" />

        <EditText
            android:id="@+id/answer4"
            style="@style/EditTextStyle"
            android:hint="case sensitive"
            android:inputType="textCapWords" />

        <TextView
            android:id="@+id/show_text_view"
            style="@style/ShowStyle"
            android:text=" " />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonPrev" />

            <Button
                android:id="@+id/show_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showAnswer"
                android:text="Show Answer" />

            <Button
                android:id="@+id/next4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonNext" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


