<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.Main3Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/image_margin"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title2"
            android:textAllCaps="true"
            android:textSize="@dimen/title_text"
            />
        <ImageView
            android:layout_width="@dimen/image_w"
            android:layout_height="@dimen/image_h"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/image_margin"
            android:layout_marginVertical="@dimen/image_margin"
            android:src="@drawable/famous"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/question_margin_h"
            android:layout_marginVertical="@dimen/question_margin_v"
            android:text="@string/question2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/question_margin_h"
            android:layout_marginVertical="@dimen/question_margin_h"
            android:orientation="vertical"
            >
            <CheckBox
                android:id="@+id/checkanswer2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2a"
                android:textSize="@dimen/answer_text"
                />
            <CheckBox
                android:id="@+id/checkanswer2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2b"
                android:textSize="@dimen/answer_text"
                />
            <CheckBox
                android:id="@+id/checkanswer2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2c"
                android:textSize="@dimen/answer_text"
                />
            <CheckBox
                android:id="@+id/checkanswer2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2d"
                android:textSize="@dimen/answer_text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/previous2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="previous"
                />
            <Button
                android:id="@+id/next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="next"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>


