<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.biblequiz.Main9Activity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/image_margin"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title8"
            android:textAllCaps="true"
            android:textSize="@dimen/title_text"
            />
        <ImageView
            android:layout_width="@dimen/image_w"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/image_margin"
            android:layout_marginVertical="@dimen/image_margin"
            android:src="@drawable/laststone"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/question_margin_h"
            android:layout_marginVertical="@dimen/question_margin_v"
            android:text="@string/endingcomment"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/question_text"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/question_margin_v"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/startover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonStartOver"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

